# ghostpost-backend

./: .gitignore  pyproject.toml
ghostpost/: settings.py  urls.py
ghostpost/posts/: admin.py  helpers.py  models.py  serializers.py  views.py
ghostpost/posts/migrations/: 0001_initial.py
